# api-github-actions-demo

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  app.py  pipelines.yaml  pyproject.toml  requirements.runtime.txt  requirements.txt  tox.ini
.github/: CODEOWNERS  dependabot.yml  pipelines.yaml
.github/workflows/: README  despliega-cloud-run.yaml  empaqueta.yaml  envia-a-docker.yaml  envia-a-packages.yml  python-app-test.yml
apiflaskdemo/: __init__.py  settings.py
apiflaskdemo/project/: blueprints.py  models.py  schemas.py
apiflaskdemo/project/auth/: __init__.py  blueprints.py  schemas.py
data/: __init__.py  alumnos.py
tests/: test_database.py  test_endpoints.py
