[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apiflask-test-demo"
version = "0.1.0"
description = "Paquete que incluye una aplicación API REST."
requires-python = ">=3.11"
dependencies = [
    "apiflask>=3.1",
    "email-validator>=2.2",
    "bcrypt>=4.2",
    "Flask-SQLAlchemy>=3.1",
    "gunicorn>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "tox>=4.23",
    "coverage>=7.6",
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["apiflaskdemo"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["apiflaskdemo"]

[tool.coverage.report]
fail_under = 80
